# gpd_utils

./: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md  package.xml  plugin.xml
action/: GraspCandidatesGeneration.action
config/: planar_segmentation.yaml
config/bt_trees/: simple_tree.xml
include/gpd_utils/: object_bounding_box.h  object_recognition_info.h  pal_grasp_detection_node.h  pal_grasp_generation_client.h  pal_grasp_generation_server.h  pcl_filters.hpp  segment_table.h  segment_table_params.h  tabletop_detector_class.h
include/gpd_utils/bt_actions/: bt_nodes_initialization.h  generate_grasping_candidates_action.h  object_cloud_extraction_action.h  tabletop_clustering_action.h  tabletop_segmentation_action.h
include/gpd_utils/states/: generate_grasping_candidates_state.h  object_cloud_extraction_state.h  tabletop_clustering_state.h  tabletop_segmentation_state.h
launch/: gpd_bt_node.launch  object_candidates_sm.launch  pal_tiago_15_channels.launch  pal_tiago_15_channels_server.launch  segment_table.launch  segment_table_sm.launch  table_top_candidates_sm.launch  tiago_hand_geometry.launch
msg/: BoundingBox.msg
src/: behaviortree_register_gpd_utils_plugins.cpp  grasp_cand_gen_bt_node.cpp  object_cloud_candidates_sm.cpp  object_recognition_info.cpp  pal_grasp_detection_node.cpp  pal_grasp_generation_client.cpp  pal_grasp_generation_server.cpp  pcl_filters.cpp  segment_table.cpp  segment_table_node.cpp  state_machine_node.cpp  tabletop_cloud_candidates_sm.cpp  tabletop_detector_class.cpp
src/bt_actions/: bt_nodes_initialization.cpp  generate_grasping_candidates_action.cpp  object_cloud_extraction_action.cpp  tabletop_clustering_action.cpp  tabletop_segmentation_action.cpp
src/states/: generate_grasping_candidates_state.cpp  object_cloud_extraction_state.cpp  tabletop_clustering_state.cpp  tabletop_segmentation_state.cpp
test/: gpd_candidates_generation_server.launch  gpd_candidates_test.cpp  gpd_candidates_test.test  object_recognition_info_test.cpp  object_recognition_info_test.test  table_segmentation_test.cpp  table_segmentation_test.test
