<?xml version="1.0"?>
<package format="2">
  <name>gpd_utils</name>
  <version>0.0.3</version>
  <description>The gpd_utils package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/gpd_utils</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>behaviortree_cpp_v3</depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gpd</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pal_detection_msgs</build_depend>
  <build_depend>smach_c</build_depend>
  <build_depend>smach_c_pal_states</build_depend>
  <build_depend>smach_c_ros_states</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pal_ariles</build_depend>
  <build_depend>pal_pcl</build_depend>
  <build_depend>behaviortree_ros_actions</build_depend>

  <build_export_depend>gpd</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pal_detection_msgs</build_export_depend>
  <build_export_depend>smach_c</build_export_depend>
  <build_export_depend>smach_c_pal_states</build_export_depend>
  <build_export_depend>smach_c_ros_states</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>pal_pcl</build_export_depend>
  <build_export_depend>behaviortree_ros_actions</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gpd</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pal_detection_msgs</exec_depend>
  <exec_depend>smach_c</exec_depend>
  <exec_depend>smach_c_pal_states</exec_depend>
  <exec_depend>smach_c_ros_states</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pal_ariles</exec_depend>
  <exec_depend>behaviortree_ros_actions</exec_depend>

  <test_depend>pal_test_utils</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <behaviortree_cpp_v3 bt_lib_plugin="libgpd_utils" />
  </export>
</package>
